--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "parse": "node ./scripts/parse.js"
   },
   "devDependencies": {
     "@openzeppelin/contracts": "^4.4.2",
     "@typechain/ethers-v5": "^9.0.0",
     "@types/node": "^17.0.15",
     "@types/react": "^17.0.39",
+    "csv-parse": "^5.0.4",
     "eslint": "^7.12.1",
     "eslint-config-next": "12.0.7",
     "eslint-config-prettier": "^8.3.0",
@@ -25,10 +27,14 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@ethersproject/abi": "^5.5.0",
     "@ethersproject/bytes": "^5.5.0",
     "@ethersproject/providers": "^5.5.3",
+    "@mui/material": "^5.4.1",
     "@reduxjs/toolkit": "^1.7.2",
+    "classnames": "^2.3.1",
     "ethers": "^5.5.4",
     "next": "^12.0.10",
     "react": "^17.0.2",
