--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,6 +23,7 @@ jobs:
         run: |
           yarn install
           yarn build
+          yarn export
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
