--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,7 +23,7 @@ jobs:
         run: |
           yarn install
           NEXT_GITHUB_PAGES_REPO=nft-collection-view NEXT_GITHUB_PAGES_HOST=https://cmdrnft.github.io yarn build
-          yarn export
+          NEXT_GITHUB_PAGES_REPO=nft-collection-view NEXT_GITHUB_PAGES_HOST=https://cmdrnft.github.io yarn export
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
