--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,10 +20,13 @@ jobs:
           node-version: "lts/*"
 
       - name: Build
+        env:
+          NEXT_GITHUB_PAGES_REPO: nft-collection-view
+          NEXT_GITHUB_PAGES_HOST: https://cmdrnft.github.io
         run: |
           yarn install
-          NEXT_GITHUB_PAGES_REPO=nft-collection-view NEXT_GITHUB_PAGES_HOST=https://cmdrnft.github.io yarn build
-          NEXT_GITHUB_PAGES_REPO=nft-collection-view NEXT_GITHUB_PAGES_HOST=https://cmdrnft.github.io yarn export
+          NODE_ENV=production yarn build
+          NODE_ENV=production yarn export
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
