--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Build
         env:
-          NEXT_GITHUB_PAGES_REPO: nft-collection-view
+          NEXT_GITHUB_PAGES_REPO: nft-collection-viewer
           NEXT_GITHUB_PAGES_HOST: https://cmdrnft.github.io
         run: |
           yarn install
